# homeassistant-winix-purifiers

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  integration.yml  model-monitor.yml  release.yml
custom_components/winix_purifiers/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  fan.py  icons.json  manifest.json  select.py  sensor.py  switch.py
custom_components/winix_purifiers/api/: __init__.py  account.py  auth.py  client.py  const.py  crypto.py  device.py  exceptions.py
custom_components/winix_purifiers/translations/: en.json
tests/: check_models.py  conftest.py  known_models.json
tests/integration/: test_account.py  test_auth.py  test_device_control.py
tests/unit/: test_account.py  test_auth.py  test_client.py  test_const.py  test_crypto.py  test_device.py  test_fan.py
